# agentes-Copilot-Python-4165033

./: .gitignore  README.md
Intro/: api_key.md  copilot_headers.md  db.md  intro.md
OpenAPI/: openapi.yaml
src/advanced-service-desk-copilot/: m365agents.local.yml  m365agents.yml
src/advanced-service-desk-copilot/appPackage/: ai-plugin.json  declarativeAgent.json  manifest.json
src/advanced_repairs_api/: .env.sample  README.md  database.py  main.py
src/advanced_service_desk_copilot/: README.md  m365agents.local.yml  m365agents.yml
src/advanced_service_desk_copilot/appPackage/: ai-plugin.json  declarativeAgent.json  manifest.json
src/pythonagenttest/: m365agents.local.yml  m365agents.playground.yml  m365agents.yml
src/pythonagenttest/appPackage/: manifest.json
src/pythonagenttest/infra/: azure.bicep  azure.parameters.json
src/pythonagenttest/src/: agent.py
src/repairs_api/: .env.sample  Dockerfile  database.py  openapi.yaml  pyproject.toml  testy.py
src/service-desk-ai/: main.py  openapi.yaml  pyproject.toml
src/service-desk-ai/respairs-agent/: m365agents.local.yml  m365agents.yml
src/service-desk-copilot/: m365agents.local.yml  m365agents.yml
src/service-desk-copilot/appPackage/: ai-plugin.json  declarativeAgent.json  instruction.txt  manifest.json
src/test/: pyproject.toml
src/test-action-agent/: m365agents.local.yml  m365agents.yml  package.json
src/test-action-agent/appPackage/: ai-plugin.json  manifest.json  repairDeclarativeAgent.json
src/toolkit_agent/: m365agents.local.yml  m365agents.yml
(+14 files in other folders)
